@@ -572,3 +572,4 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20071130 internals.h,libspectrum.c,libspectrum.h.in,tap.c,tape.c: add support
 	 for .spc, .sta and .ltp tape images (feature request #1764995)
 	 (Stuart).
+20071130 libspectrum.h.in: refer also to the DISCiPLE in comments (Stuart).
